# The unique purpose of this file is for GNOME Damned Lies integration

DOC_ID = geary

DOC_PAGES = \
	accounts.page \
	archive.page \
	bugs.page \
	index.page \
	label.page \
	limits.page \
	overview.page \
	preferences.page \
	search.page \
	shortcuts.page \
	star.page \
	write.page

DOC_LINGUAS = el es
