geary_help_pages = [
  'accounts.page',
  'archive.page',
  'bugs.page',
  'contributing.page',
  'index.page',
  'label.page',
  'limits.page',
  'overview.page',
  'preferences.page',
  'search.page',
  'shortcuts.page',
  'star.page',
  'write.page',
]

geary_help_media = [
  'figures/geary.svg'
]

gnome.yelp(meson.project_name(),
  sources: geary_help_pages,
  media: geary_help_media
)
